# Conway

./: CMakeLists.txt  README.md
include/: conway.h  userinput.h
src/: conway.cpp  main.cpp  userInput.cpp
